--- a/_posts/2025-07-09-panicle.md
+++ b/_posts/2025-07-09-panicle.md
@@ -19,7 +19,7 @@ Recently I have exercised the bad habit of reading or watching extensively media
 
 I should be more specific. I watched 'Crumb.' I spent a few days, weeks ago, scrolling through a public Google Doc detailing the Bay-Area-localized and so-called 'Zizian death cult.' I read the Wikipedia articles on Waco and the Ruby Ridge standoff, which I must have done before, years ago. I flipped through part of an old mathematics paper by Kaczynski, like many do upon learning about him, and which yields only an imitation of significance. I think my conclusion is that reading such stuff, as though one were fifteen again, in high-school, and just beginning to learn that the edge of the shape of some people's souls is quite jagged, provides no slim, compact, or fable-like truths. Human deviations appear so sinewy, so bespoke, founded as they often are on extreme specificity of locale and input. The underlying discontents may be familiar, but that is not what one reads for. What do I know of the panhandle of Idaho, which even now is seemingly wracked with malcontent and murder? How do I understand how someone who has gone through (apparently) similar heatings and quenchings of blue-blooded mathematical and computer-science education can stab a man through his middle with a katana? This is part of the easy fascination with 'Crumb': does the average watcher really know (and can thus absorb and actually respond to) what it would be like to obsess only about the book 'Treasure Island,' or to suffer seizures induced by sexual arousal, or to watch your mother (high on amphetamines) scratch the face of your father (who beats you, and her) as a child? I ought not to forget about the brutality of human experience, especially as exacerbated by certain very American ideals of self-reliance, but remembrance of or reminders toward this kind of extremity often contains something closer to the illusion of revelation, rather than its actual mechanism. We watch and we nod. We make expressions. It is very hard to learn about these things and hold them centrally and purely inside of oneself. Do you agree? It is slippery and I find myself distrusting people who say they can really feel the shape of a horrible mind. The limning here is very sharp. This may mean I am dumb. It may mean I am swaddled and anesthetized.
 
-I hope, perhaps misguidedly, that there is some unique success in 'Crumb.' I hope because I think I felt moved by the film. It is easy to view Robert Crumb as a hedonist, a a pervert. The film's first trick is showing us his brothers, who in comparison have been destroyed, have allowed themselves to be Haldol-ed to oblivion, against what seem to be not dissimilar crises to their brother, who instead has managed to bury himself in (controversial, but successful, prolific, and *structured*) artistic production. We, the normie watchers, think we understand this kind of output and sense much better: there is much more method in the madness. The easy takeaway then is something about 'art as therapy.' More curious, however, is that we are made to see very closely the actual mechanisms of Crumb against immense and adjacent pressure and pain (the actual production of his endless books, meanwhile, the purported reason we should care, is basically not shown). He laughs at and diffuses gallows humor from his brother Charles (who kills himself a year after filming). He remains motionless while providing small-talk to the movers emptying his house of all of his fragile well-loved possessions. He refuses to sell his film rights. He fumbles with the hands of his past lovers, and claims to know little of why they left him. Crumb's avoidance of his brothers' catatonia is almost miraculous, somehow immensely principled while appearing thin and low-to-the-earth, almost flippant. Whatever improper ideas he may have about relationships between men and women, he still speaks to people, responds to their questions, holds-down relationships and correspondences. There is a deep, mollifying normieness in his demeanor, which he importantly seemingly accepts. He does not, like his first brother, seek to sit on a bed of nails, to pass a string through his entire digestive tract to cleanse himself. He does not, like his second brother, never leave the house. He sits on his floor sometimes and listens to 78s. He roams Berkeley. He sketches customers in cafés. His perversions are very easy to see as somehow far from the true 'edge.' His brothers' catastrophic withdrawals place his milquetoast mechanism, his bland practice, into relief (perhaps at their expense, at the cost of our understanding of them); in this way the hopelessness of so much of the substrate of the story is counterbalanced. We might not know why he is 'OK,' but we see *how*, again and again. I guess I am not sure if this is another trick or not------it's just that Robert Crumb seems very much to think and care about distant people, dysfunctional people, while exhibiting very few of their mechanisms and ailments.
+I hope, perhaps misguidedly, that there is some unique success in 'Crumb.' I hope because I think I felt moved by the film. It is easy to view Robert Crumb as a hedonist, a pervert. The film's first trick is showing us his brothers, who in comparison have been destroyed, have allowed themselves to be Haldol-ed to oblivion, against what seem to be not dissimilar crises to their brother, who instead has managed to bury himself in (controversial, but successful, prolific, and *structured*) artistic production. We, the normie watchers, think we understand this kind of output and sense much better: there is much more method in the madness. The easy takeaway then is something about 'art as therapy.' More curious, however, is that we are made to see very closely the actual mechanisms of Crumb against immense and adjacent pressure and pain (the actual production of his endless books, meanwhile, the purported reason we should care, is basically not shown). He laughs at and diffuses gallows humor from his brother Charles (who kills himself a year after filming). He remains motionless while providing small-talk to the movers emptying his house of all of his fragile well-loved possessions. He refuses to sell his film rights. He fumbles with the hands of his past lovers, and claims to know little of why they left him. Crumb's avoidance of his brothers' catatonia is almost miraculous, somehow immensely principled while appearing thin and low-to-the-earth, almost flippant. Whatever improper ideas he may have about relationships between men and women, he still speaks to people, responds to their questions, holds-down relationships and correspondences. There is a deep, mollifying normieness in his demeanor, which he importantly seemingly accepts. He does not, like his first brother, seek to sit on a bed of nails, to pass a string through his entire digestive tract to cleanse himself. He does not, like his second brother, never leave the house. He sits on his floor sometimes and listens to 78s. He roams Berkeley. He sketches customers in cafés. His perversions are very easy to see as somehow far from the true 'edge.' His brothers' catastrophic withdrawals place his milquetoast mechanism, his bland practice, into relief (perhaps at their expense, at the cost of our understanding of them); in this way the hopelessness of so much of the substrate of the story is counterbalanced. We might not know why he is 'OK,' but we see *how*, again and again. I guess I am not sure if this is another trick or not------it's just that Robert Crumb seems very much to think and care about distant people, dysfunctional people, while exhibiting very few of their mechanisms and ailments.
 
 The question of understanding and internalization with film is probably hairy, and must litter many thick tomes I will never read. I have to imagine some lizard-like part of the brain receives nutrients when watching what someone in fact *does* for hours and hours, visually. This same part of the brain may starve given only language. We may be 'told' things by this part, eventually: by some hidden sulcus or gyrus. This is where one inserts the over-used anecdote of McCarthy about Kekulé and the benzene ring. We see strange shapes through Crumb's highly refractive coke-bottle glasses, hear something in his constant swallowing. This is unlike Ziz's blog, or the hacksaw-edited and often puerile Wikipedia articles on the various fuck-ups of the US government and cultists/anarchists. We are much better at controlling text, I have to imagine, than the whole visual plane, and thus the latter can force a sort of honesty, or submission. Whether this yields the sort of insights that the pale and bespectacled can accept as useful knowledge, I don't know.
 
@@ -27,6 +27,6 @@ It is many days later that I am editing this post, sitting in the same café (an
 
 I tend to my pepper plant on the balcony, whose flowers I have been pollinating with the small soft brush that came with my Timemore C3 coffee grinder. Previously the flowers would auto-amputate, leaving nothing, though the ones I brushed have now each swelled into small, green, shiny proto-peppers. Whether this is my doing, or the plant has simply grown strong enough to fruit, is unclear to me. Three more flowers opened the day before yesterday, for which I repeated the process: anything more I may prune.
 
-I miss my first Cambridge apartment, to which I affixed no unit air conditioning unit, forcing me to adapt to the warm nights by opening my window; I have mentioned this before. The apartment had wide-beamed natural wooden floors done over in a glossy varnish. The street was canopied by trees, and draped in enough greenery that the night seemed to cool more rapidly than elsewhere in the city. A friend of mine recently moved into a new apartment------I mean to ask them about it; moving is never storyless------storms and heatwaves appear to be roiling the East Coast, and they have fragile plants in many plastic containers to courier. What is it like to move in a major city these days? And which way does the light come into their windows, now? In just a few weeks I will have been here for a year; every morning I come into the office I walk past the spot on the street, just in front of 根津駅, where I was dropped off in a taxi after taking a bus from the Airport to the nearby TCAT ~~This TCAT (東京シティエアターミナル) being the same grubby transit hub, tucked beneath a highway overpass, that I was dropped at the first time I came to Tokyo, in June of 2017.~~. I didn't know the exact address of my lodging then, and had not noticed that between the station and my temporary apartment was one of the steepest hills in the area. I dragged my bags up in pairs, sweating freely, basically thinking nothing. There was only action, and exertion. When I made it inside, around 5:30pm, I washed my face first, and then laid on the bed, blasting the air-conditioning, feeling the blood slowly leave my arms, which would ache for the next two days.
+I miss my first Cambridge apartment, to which I affixed no unit air conditioning, forcing me to adapt to the warm nights by opening my window; I have mentioned this before. The apartment had wide-beamed natural wooden floors done over in a glossy varnish. The street was canopied by trees, and draped in enough greenery that the night seemed to cool more rapidly than elsewhere in the city. A friend of mine recently moved into a new apartment------I mean to ask them about it; moving is never storyless------storms and heatwaves appear to be roiling the East Coast, and they have fragile plants in many plastic containers to courier. What is it like to move in a major city these days? And which way does the light come into their windows, now? In just a few weeks I will have been here for a year; every morning I come into the office I walk past the spot on the street, just in front of 根津駅, where I was dropped off in a taxi after taking a bus from the Airport to the nearby TCAT ~~This TCAT (東京シティエアターミナル) being the same grubby transit hub, tucked beneath a highway overpass, that I was dropped at the first time I came to Tokyo, in June of 2017.~~. I didn't know the exact address of my lodging then, and had not noticed that between the station and my temporary apartment was one of the steepest hills in the area. I dragged my bags up in pairs, sweating freely, basically thinking nothing. There was only action, and exertion. When I made it inside, around 5:30pm, I washed my face first, and then laid on the bed, blasting the air-conditioning, feeling the blood slowly leave my arms, which would ache for the next two days.
 
-A calmer week has made me want to disclaim that I am often performing a sort of sadness in these posts. I lexically snivel, unwarrantedly. I should make it clear that I am not (always, or as often as these posts suggest) in Total Crisis, however much heat-lightning licks silently from a [supercell](https://en.wikipedia.org/wiki/File:Supercell02.svg) on the horizon. There is too much important in the *doing* of this for me to be persistently unclear about what I am feeling, though I am aware that there is utility and success and pleasure in fettling, in layering custom glazes of ersatz sadness behind which gloom's true rhizome can shoot its adventitious creepers. You may judge as you see. My calyx is frangible. I ought to show you what I mean. There is perverse and low-calorie joy in writing to someone only pluvial, atmospherically, maintaining always that one does not really know what one is doing. But I agonize over bits of these epistles all the time------wipe their fripperous crevices, candle them like an egg------and this seriousness must be downstream of my caring for their recipients. An anxious anticipation. Here is my inability to speak plainly, wrapped up in my apparent surety that to speak plainly would gurney what I intend. Admitting this is as clear as I can be.
+A calmer week has made me want to disclaim that I am often performing a sort of sadness in these posts. I lexically snivel, unwarrantedly. I should make it clear that I am not (always, or as often as these posts suggest) in Total Crisis, however much heat-lightning licks silently from a [supercell](https://en.wikipedia.org/wiki/File:Supercell02.svg) on the horizon. There is too much important in the *doing* of this for me to be persistently unclear about what I am feeling, though I am aware that there is utility and success and pleasure in fettling, in layering custom glazes of ersatz sadness behind which gloom's true rhizome can shoot its adventitious creepers. You may judge as you see. My calyx is frangible. I ought to show you what I mean. There is perverse and low-calorie joy in writing to someone only pluvially, atmospherically, maintaining that one does not really know what one is doing. But I agonize over bits of these epistles all the time------wipe their fripperous crevices, candle them like an egg------and this seriousness must be downstream of my caring for their recipients. An anxious anticipation. Here is my inability to speak plainly, wrapped up in my apparent sureness that to speak plainly would gurney what I intend. Admitting this is as clear as I can be.
