--- a/_drafts/2022-06-15-gloom.md
+++ b/_drafts/2022-06-15-gloom.md
@@ -8,6 +8,29 @@ location: "Location"
 ordinal: 0
 preview: "Currently empty."
 ---
+Never really understanding the ekphrastic novel
+
+Intertitles.
+
+Copy of Joyce. Copy of 'raise high the roombeam, carpenters' and Seymour.
+
+Didi's fascination with the bleak and industrial. Her preference for a train's number. Small expenditures, doled out like bites of iceboxed fruit over the course of a long summer day.
+
+Swim lessons in high-school; every young boy seems to be a pervert. So much time spent around pool caustics. The rasp of encircling concrete.
+
+Herzog's interviews.
+
+Listening to Mishima again: a new CD to seek that, because of its relative obscurity, will act as poultice to my feverish habits.
+
+Dappled, endlessly recopied PDFs from compilations whose paper covers I'll never feel.
+
+Old physical paperbacks as a sort of low-background steel; thoughts that this stuff is nutritious, and that I can feel the soul more keenly.
+
+Blood and bonemeal. Golems. We have no defenses, no phages, against such geists.
+
+The fear that I've not been spending any *time* with people---everything, the videos, the fevered reading, the jaunts outside, are too episodic, reactionary, and petulant to encourage the process of change: which, like scabbing, is a process best aided by long intervals of damp compress and only in extreme cases debridement.
+
+
 I make up the following fact: lying flat on the ground keeps one within the coolest stratum of air in a room. Cold sinks; this is something we learn in school, and something felt in things like our grandparent's basements along with more basic, less explicable fears. This simple physical phenomenon may be the reason many believe ghosts inhabit dark, quiet, cool, low places. I spend the hours between noon and three p.m. supine, straining my eyes to read my phone. The phone hovers dangerously above my face. Outside the air seethes. It is grievously refractive. This is the most dangerous thing I do all day. The lowest six inches of my room contain, I desperately hope, the most chilling ghouls of Massachusetts, of which we all know there are many.
 
 Occasionally I remove sweat from my forehead with the back of my hand, which I then wipe on my area rug. I transfer moisture, which must, I imagine, reëvaporate and return to the humidity of the room. I exhale a warm envelope for myself. The doors and windows are shut very tight against the catastrophic temperature. The word hermetic and hermit share comically obvious etymology. The sun is acutely zenithal, unaccommodating, and cruel. It pries through cracks to cut glowing slits in other things. I keep a box fan going, elevated on a small broken wooden stool whose foot is splinted with duct tape. The fan mixes the air of the room, which challenges, I begin to think, my theory of different strata of different temperatures. I consider turning the fan off, but I like the way the motive air feels across my perpetually weeping forehead. Somewhere far away something is being furiously burned to turn a turbine whose electricity turns my fan here.
