--- a/_posts/2025-06-30-june.md
+++ b/_posts/2025-06-30-june.md
@@ -6,7 +6,7 @@ date: 2025-06-30 20:00:00 +09
 permalink: "/june/"
 location: "東京都世田谷区北沢"
 ordinal: 49
-preview: "In the center of a lecture on the study of the game of Go, John Conway's voice breaks, and he pauses for a moment, eyes rheumy, remembering the story of the (unexpected, momentous) arrival of the French delegation to the first International Mathematical Congress, as encouraged by Poincaré, who had promised Cantor."
+preview: "In the center of a lecture on the study of the game of Go, John Conway's voice breaks and he pauses, eyes rheumy, remembering the story of the (unexpected, momentous) arrival of the French delegation to the first International Mathematical Congress, as encouraged by Poincaré, who had promised Cantor."
 ---
 
 I read 'Franny' again, in the afternoon. From my bed I could see my pepper plant outside, drooping in the heat. At night it swells and lifts its leaves again. The past few weeks have been meteorologically miserable. I have developed, I think, some real anxiety over going out unprepared into direct sunlight, verging on photophobia. So I stayed inside; I drew my MUJI curtains; I adjusted my AC to be low but constant. When the days seethe I often roll around on my futon for a while, at intervals, in petulance. I notice that my chest sometimes catches, especially in the evenings, and when this happens I rub a spot roughly over my heart with the heel of my hand, to smooth the bolus which is either sadness or worry. There is a psychic aspect to this, but that does not mean the bolus is not really there. I thought that the short story was very beautiful------it depicted a sort of spiritual crisis. It also showed that embarrassing habit of speaking indirectly or even obversely about one's desires for another, where while one might intend to effect coolness or erudition, the result is obfuscation and distance. What is the shape of Total Submission? To openly affect infatuation with another often basically euthenizes their interest, and so we end up intestinally knotted and cerebrally thrombosed. We writhe in our sleep. Salinger says later, in 'Zooey,' that anyone over the age of sixteen without an ulcer is a *goddamn spy*. The story is, of course, also 'about' Salinger's spats and resentments. Salinger wrote many letters, often simultaneously, to many extremely young women for most of his life, proclaiming a unique love in each. But when I read 'Franny' I am focused, and feel moved, I think, or at least smoothed, by Franny's earnest attempt (unto syncope) to communicate what she thinks she's been given by her little pea-green cloth-bound book, 'The Way of a Pilgrim.'
