--- a/_posts/2025-07-09-panicle.md
+++ b/_posts/2025-07-09-panicle.md
@@ -9,7 +9,7 @@ ordinal: 50
 preview: "The 10th will mark another full moon; recently it has been rising just after I return home from work: low, yellowed, and cloaked in nimbus."
 ---
 
-There is a café built into my closest train station (東北沢駅): unremarkable, but clean and quiet, with internet, and accents of blonde wood and stainless steel. Through multi-paned glass I can faintly hear the single- and double-chimes of the ticket gates. The front door, often left open, gives out toward the above-ground portion of the 小田急線, which rises into view just past this stop (the last within a massive project, ten years ago, to bury the tracks until 梅ヶ丘駅). I sit at a counter abutting a window looking toward the street through a tall, spindly bush that has put out fresh leaves. Suspended within the bush are long tube-like inflorescences. The clustered flowers composing the inflorescences are mostly white, though their centers kissed with pink, and yellow pollen-covered anthers cap their stamina. I see also, deeper within the bush, a single green leaf on whose verso is adhered a cluster of tiny white eggs (perhaps laid by some insect).
+There is a café built into my closest train station (東北沢駅): unremarkable, but clean and quiet, with internet, and accents of blonde wood and stainless steel. Through multi-paned glass I can faintly hear the single- and double-chimes of the ticket gates. The front door, often left open, gives out toward the above-ground portion of the 小田急線, which rises into view just past this stop (the last within a massive project, ten years ago, to bury the tracks until 梅ヶ丘駅). I sit at a counter abutting a window looking toward the street through a tall, spindly bush that has put out fresh leaves. Suspended within the bush are long tube-like inflorescences. The clustered flowers composing the inflorescences are mostly white, though their centers are kissed with pink, and yellow pollen-covered anthers cap their stamina. I see also, deeper within the bush, a single green leaf on whose verso is adhered a cluster of tiny white eggs (perhaps laid by some insect).
 
 Later, a bee transits from inflorescence to inflorescence, calling on many of the smaller flowers within. I think it is a bee: it could be some small striped fly and not a true bee. The bee shoves its entire head into the flowers.
 
