--- a/_posts/2025-08-05-weir.md
+++ b/_posts/2025-08-05-weir.md
@@ -42,7 +42,7 @@ One has to be very very careful how we deal with each other, and that's one of t
 No, no, I, for God's sake, I would be the last one who would ever allow it. I think, I think it is one of the greatest stupidities and the greatest mistakes of the 20th century. There's something finally and definitively wrong about psychoanalysis. I have, all my figures in my films, they are not captured with psychoanalysis. And I believe that explaining every dark little corner that we have in our soul is a very unhealthy, and a very stupid, and a very dangerous thing. We should not do that. Why? Because when when you inhabit a house and you illuminate every last corner of the house with strong lights, the house becomes uninhabitable. ~~This word in particular, each syllable emphasized and the bending toward ä, is beautifully rendered.~~ And human beings illuminated to the very last corner of their darkest soul become inhuman and uninhabitable.
 {: .quote}
 
-I admit I try to understand this because of Sophie------not that their distance is some psychoanalytic reflex or exercise, I understand, though it seems to me they believe quite deeply that certain insights yield to active study, for which I have always admired them. There is nothing I can do besides to care and try to inscribe the shape of this distance in too many anecdotes. It is just the coincidence of Salinger and Herzog's distaste for what they claim are psychoanalytical practices and practitioners that has stirred me a little now----I have loved what they have said and shown me elsewhere, or am else taken by their efforts, and so I should not immediately scorn their fears and annoyances. To despise something seriously must negatively define something loved or prized or at least comforting. Their arguments also glom onto the usual, larger ones on the differences between what is *said* and what is *meant*. What is *said* versus what is *understood*. Salinger died a seclusive mystic, while Herzog now appears in the IP of megacorporations.
+I admit I try to understand this because of Sophie------not that their distance is some psychoanalytic reflex or exercise, I understand, though it seems to me they believe quite deeply that certain insights yield to active study, for which I have always admired them. There is nothing I can do besides to care and try to inscribe the shape of this distance in too many anecdotes. It is just the coincidence of Salinger and Herzog's distaste for what they claim are psychoanalytical practices and practitioners that has stirred me a little now------I have loved what they have said and shown me elsewhere, or am else taken by their efforts, and so I should not immediately scorn their fears and annoyances. To despise something seriously must negatively define something loved or prized or at least comforting. Their arguments also glom onto the usual, larger ones on the differences between what is *said* and what is *meant*. What is *said* versus what is *understood*. Salinger died a seclusive mystic, while Herzog now appears in the IP of megacorporations.
 
 Both seem incensed that the analyst is not only missing something but in fact seeing things that are not there------moreover that this misidentification is usually confident, forgetting the subject insidiously. Herzog maybe gives more credence to ultimate conclusions with some *caveat lector*. Salinger too cannot cleave totally from the literary beauty doled by the best acolytes. Herzog says, in that other video, now much-distributed, where he discusses the forest and its 'harmony of overwhelming and collective murder,' that he still loves the forest, though '\[he\] love\[s\] it against \[his\] better judgement.' Salinger despite his antipathies still wrote lascivious letters to teens deep into his life. I am at times serenely comforted that we seem all do things we know are bad for us------not just as judged by others, but even after cleanly and honestly interpreting our own souls. To admit my comfort in this opens up the possibility for immense abuse and contradiction.
 
@@ -52,7 +52,7 @@ Later in his pseudo-essay Salinger says, "What I am, I think, is a thesaurus of 
 
 Occasionally recently, if I am having trouble falling asleep, I try to freely remember scenes from my youth, or things I have once read, or had said to me. I think of the first time I read 'Kafka on the Shore' in middle school, stealing my sisters thick paperback copy. I read it alone in my room because of its occasional, vague sexual content. I sometimes still tell myself, to break the silence of my apartment, that 'you have to be the toughest fourteen year-old on the planet,' though when I go back and locate the section, just in the first few pages, it actually reads:
 
-"From now on--no matter what--you've got to be the world's toughest fifteen year-old. That's the only way you're going to survive. And in order to do that, you've got to figure out what it means to be tough. You following me?"
+"From now on--no matter what------you've got to be the world's toughest fifteen year-old. That's the only way you're going to survive. And in order to do that, you've got to figure out what it means to be tough. You following me?"
 {: .quote}
 
 And then just later:
@@ -62,4 +62,4 @@ And then just later:
 
 I remember my heart hurting then over not having some coastal library to which I could flee as a fourteen year-old. No Oshima. No Mrs. Saeki. I must have been around that age, I suppose. I remember being nineteen reading 'Norwegian Wood,' also, which is the quoted age of the main characters. I have discussed these books some with my sister, some with Sophie, some with friends of friends who reveal to me, looking for an easy connection, that they also had a Murakami phase. It astounds me to no end that 村上春樹 is alive and doing something as I speak.
 
-I fear recently that I've not been spending any *time* with people------everything, the videos I watch, the fevered reading, the jaunts outside, are too episodic, reactionary, and petulant to encourage any process of change which, like scabbing, is best aided by long intervals of damp compress and only in extreme cases debridement. Instead I, like the perverted teen during open swim lessons in middle school, inspect mainly what others do rapidly and disjointly. One read's scryingly, hoping embarrassingly that one will be mentioned, or at least one's penumbra cast from off-page. One finds that one at once wishes to be completely removed, serene, but also to be berated and influenced and *involved*. Touched. Contorted. Made pliant and porous. There is some crisis, some bad mechanism, in that I can be 'perfectly intelligible' and yet feel such things. I fail to be patient when I do this, then. And this must mean I have become forgetful, and that my apprehensions, embrittled, are ungenerous to you.
+I fear recently that I've not been spending any *time* with people------everything, the videos I watch, the fevered reading, the jaunts outside, are too episodic, reactionary, and petulant to encourage any process of change which, like scabbing, is best aided by long intervals of damp compress and only in extreme cases debridement. Instead I, like the perverted teen during open swim lessons in middle school, inspect mainly what others do rapidly and disjointedly. One reads scryingly, hoping embarrassingly that one will be mentioned, or at least one's penumbra will be cast from off-page. One finds that one at once wishes to be completely removed, serene, but also to be berated and influenced and *involved*. Touched. Contorted. Made pliant and porous. There is some crisis, some bad mechanism, in that I can be 'perfectly intelligible' and yet feel such things. I fail to be patient when I do this, then. And this must mean I have become forgetful, and that my apprehensions, embrittled, are ungenerous to you.
