--- a/_posts/2025-08-05-weir.md
+++ b/_posts/2025-08-05-weir.md
@@ -26,7 +26,7 @@ The actors by their presence always convince me, to my horror, that most of what
 
 The story's phlegm-clearing preamble ends with the following 'near-polemic,' where the purported narrator (Buddy Glass) starts winding around the topic of his brother Seymour's misunderstood life and suicide.
 
-By every logical definition, he \[Seymour\] was an unhealthy specimen, he did on his worst nights and late afternoons give out not only cries of pain but cries for help, and when nominal help arrived, he did decline to say in perfectly intelligible language where it hurt. Even so, I do openly cavil with the declared experts in these matters------the scholars, the biographers, and especially the current ruling intellectual aristocracy educated in one or another of the big public psychoanalytical schools------and I cavil with them most acrimoniously over this: they don't listen properly to cries of pain when they come. They can't, of course. They're a peerage of tin cars. With such faulty equipment, with those cars, how can anyone possibly trace the pain, by sound and quality alone, back to its source? With such wretched hearing equipment, the best, I think, that can be detected, and perhaps verified, is a few stray, thin overtones------hardly even counterpoint------coming from a troubled childhood or a disordered libido. But where does by far the bulk, the whole ambulance load, of pain really come from? Where must it come from? Isn't the true poet or painter a seer? Isn't he, actually, the only seer we have on earth? Most apparently not the scientist, most emphatically not the psychiatrist. (Surely the one and only great poet the psychoanalysts have had was Freud himself; he had a little car trouble of his own, no doubt, but who in his right mind could deny that an epic poet was at work?) Forgive me; I'm nearly finished with this. In a seer, what part of the human anatomy would necessarily be required to take the most abuse? The eyes, certainly. Please, dear general reader, as a last indulgence (if you're still here), re-read those two short passages from Kafka and Kierkegaard ~~The latter omitted, though the passage of Kafka is the one above.~~ I started out with. Isn't it clear? Don't those cries come straight from the eyes? However contradictory the coroner's report------whether he pronounces Consumption or Loneliness or Suicide to be the cause of death------isn't it plain how the true artist-seer actually dies? I say (and everything that follows in these pages all too possibly stands or falls on my being at least nearly right)------I say that the true artist-seer, the heavenly fool who can and does produce beauty, is mainly dazzled to death by his own scruples, the blinding shapes and colors of his own scared human conscience.
+By every logical definition, he \[Seymour\] was an unhealthy specimen, he did on his worst nights and late afternoons give out not only cries of pain but cries for help, and when nominal help arrived, he did decline to say in perfectly intelligible language where it hurt. Even so, I do openly cavil with the declared experts in these matters------the scholars, the biographers, and especially the current ruling intellectual aristocracy educated in one or another of the big public psychoanalytical schools------and I cavil with them most acrimoniously over this: they don't listen properly to cries of pain when they come. They can't, of course. They're a peerage of tin ears. With such faulty equipment, with those ears, how can anyone possibly trace the pain, by sound and quality alone, back to its source? With such wretched hearing equipment, the best, I think, that can be detected, and perhaps verified, is a few stray, thin overtones------hardly even counterpoint------coming from a troubled childhood or a disordered libido. But where does by far the bulk, the whole ambulance load, of pain really come from? Where must it come from? Isn't the true poet or painter a seer? Isn't he, actually, the only seer we have on earth? Most apparently not the scientist, most emphatically not the psychiatrist. (Surely the one and only great poet the psychoanalysts have had was Freud himself; he had a little ear trouble of his own, no doubt, but who in his right mind could deny that an epic poet was at work?) Forgive me; I'm nearly finished with this. In a seer, what part of the human anatomy would necessarily be required to take the most abuse? The eyes, certainly. Please, dear general reader, as a last indulgence (if you're still here), re-read those two short passages from Kafka and Kierkegaard ~~The latter omitted, though the passage of Kafka is the one above.~~ I started out with. Isn't it clear? Don't those cries come straight from the eyes? However contradictory the coroner's report------whether he pronounces Consumption or Loneliness or Suicide to be the cause of death------isn't it plain how the true artist-seer actually dies? I say (and everything that follows in these pages all too possibly stands or falls on my being at least nearly right)------I say that the true artist-seer, the heavenly fool who can and does produce beauty, is mainly dazzled to death by his own scruples, the blinding shapes and colors of his own scared human conscience.
 {: .quote}
 
 My credo is stated. I sit back. I sigh------happily, I'm afraid. I light a Murad, and go on, I hope to God, to other things.
