--- a/_posts/2025-09-19-omomuki.md
+++ b/_posts/2025-09-19-omomuki.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "tchotchkes"
+title: "baubles and tchotchkes"
 sub-title: "reading the weather."
 date: 2025-09-19 16:00:00 +09
 permalink: "/omomuki/"
